fixed home title spacing

--- a/website/css/styles.css
+++ b/website/css/styles.css
@@ -287,6 +287,10 @@ pre {
 .post-header {
   margin-bottom: 30px; }
 
+.post-header h1 {
+  padding-top: 50px;
+}
+
 .post-title {
   font-size: 42px;
   letter-spacing: -1px;
